增加了板载蜂鸣器和电源电压测量驱动

--- a/DM_02_Hero.ioc
+++ b/DM_02_Hero.ioc
@@ -1,12 +1,30 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_19
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV64
+ADC1.ClockPrescalerADC3=ADC_CLOCK_ASYNC_DIV4
+ADC1.ContinuousConvMode=ENABLE
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,ClockPrescalerADC3,ContinuousConvMode,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversion,master
+ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
+ADC1.OffsetSignedSaturation-1\#ChannelRegularConversion=DISABLE
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.Rank-1\#ChannelRegularConversion=2
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_32CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_32CYCLES_5
 ADC1.master=1
+ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
+ADC3.ClockPrescaler=ADC_CLOCK_ASYNC_DIV64
+ADC3.ClockPrescalerADC3=ADC_CLOCK_ASYNC_DIV4
+ADC3.IPParameters=Rank-1\#ChannelRegularConversion,ClockPrescalerADC3,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSign-1\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
+ADC3.NbrOfConversionFlag=1
+ADC3.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.OffsetSign-1\#ChannelRegularConversion=ADC3_OFFSET_SIGN_NEGATIVE
+ADC3.Rank-1\#ChannelRegularConversion=1
+ADC3.SamplingTime-1\#ChannelRegularConversion=ADC3_SAMPLETIME_640CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -87,32 +105,39 @@ MMTConfigApplied=false
 Mcu.CPN=STM32H723VGT6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
-Mcu.IP1=CORTEX_M7
-Mcu.IP10=SPI6
-Mcu.IP11=SYS
-Mcu.IP12=USART1
-Mcu.IP2=DEBUG
-Mcu.IP3=FDCAN1
-Mcu.IP4=FDCAN2
-Mcu.IP5=FDCAN3
-Mcu.IP6=FREERTOS
-Mcu.IP7=MEMORYMAP
-Mcu.IP8=NVIC
-Mcu.IP9=RCC
-Mcu.IPNb=13
+Mcu.IP1=ADC3
+Mcu.IP10=RCC
+Mcu.IP11=SPI6
+Mcu.IP12=SYS
+Mcu.IP13=TIM12
+Mcu.IP14=USART1
+Mcu.IP2=CORTEX_M7
+Mcu.IP3=DEBUG
+Mcu.IP4=FDCAN1
+Mcu.IP5=FDCAN2
+Mcu.IP6=FDCAN3
+Mcu.IP7=FREERTOS
+Mcu.IP8=MEMORYMAP
+Mcu.IP9=NVIC
+Mcu.IPNb=15
 Mcu.Name=STM32H723VGTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
 Mcu.Pin10=PD13
-Mcu.Pin11=PA11
-Mcu.Pin12=PA12
-Mcu.Pin13=PA13(JTMS/SWDIO)
-Mcu.Pin14=PA14(JTCK/SWCLK)
-Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin16=VP_SYS_VS_tim1
-Mcu.Pin17=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin11=PA10
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13(JTMS/SWDIO)
+Mcu.Pin15=PA14(JTCK/SWCLK)
+Mcu.Pin16=PC12
+Mcu.Pin17=VP_ADC3_TempSens_Input
+Mcu.Pin18=VP_ADC3_Vref_Input
+Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin2=PA5
+Mcu.Pin20=VP_SYS_VS_tim1
+Mcu.Pin21=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin22=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin3=PA7
 Mcu.Pin4=PC4
 Mcu.Pin5=PB12
@@ -120,7 +145,7 @@ Mcu.Pin6=PB13
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PD12
-Mcu.PinsNb=18
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H723VGTx
@@ -143,6 +168,8 @@ NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
 PA12.Mode=FDCAN_Activate
@@ -151,10 +178,7 @@ PA13(JTMS/SWDIO).Mode=Serial_Wire
 PA13(JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14(JTCK/SWCLK).Mode=Serial_Wire
 PA14(JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
-PA5.GPIOParameters=GPIO_Speed
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PA5.Mode=TX_Only_Simplex_Unidirect_Master
-PA5.Signal=SPI6_SCK
+PA5.Signal=ADCx_INP19
 PA7.GPIOParameters=GPIO_Speed
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
@@ -165,8 +189,11 @@ PB13.Mode=FDCAN_Activate
 PB13.Signal=FDCAN2_TX
 PB14.Mode=Asynchronous
 PB14.Signal=USART1_TX
-PB15.Mode=Asynchronous
-PB15.Signal=USART1_RX
+PB15.Signal=S_TIM12_CH2
+PC12.GPIOParameters=GPIO_Speed
+PC12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC12.Mode=TX_Only_Simplex_Unidirect_Master
+PC12.Signal=SPI6_SCK
 PC4.Locked=true
 PC4.Signal=ADCx_INP4
 PD12.Mode=FDCAN_Activate
@@ -208,7 +235,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_FDCAN2_Init-FDCAN2-false-HAL-true,5-MX_FDCAN3_Init-FDCAN3-false-HAL-true,6-MX_SPI6_Init-SPI6-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_FDCAN2_Init-FDCAN2-false-HAL-true,5-MX_FDCAN3_Init-FDCAN3-false-HAL-true,6-MX_SPI6_Init-SPI6-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=96000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -289,21 +316,36 @@ RCC.VCO3OutputFreq_Value=96750000
 RCC.VCOInput1Freq_Value=12000000
 RCC.VCOInput2Freq_Value=12000000
 RCC.VCOInput3Freq_Value=750000
+SH.ADCx_INP19.0=ADC1_INP19,IN19-Single-Ended
+SH.ADCx_INP19.ConfNb=1
 SH.ADCx_INP4.0=ADC1_INP4,IN4-Single-Ended
 SH.ADCx_INP4.ConfNb=1
+SH.S_TIM12_CH2.0=TIM12_CH2,PWM Generation2 CH2
+SH.S_TIM12_CH2.ConfNb=1
 SPI6.CalculateBaudRate=60.0 MBits/s
 SPI6.Direction=SPI_DIRECTION_2LINES_TXONLY
 SPI6.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI6.Mode=SPI_MODE_MASTER
 SPI6.VirtualType=VM_MASTER
+TIM12.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM12.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload
+TIM12.Period=10000
+TIM12.Prescaler=240
 USART1.BaudRate=921600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+VP_ADC3_TempSens_Input.Mode=IN-TempSens
+VP_ADC3_TempSens_Input.Signal=ADC3_TempSens_Input
+VP_ADC3_Vref_Input.Mode=IN-Vrefint
+VP_ADC3_Vref_Input.Signal=ADC3_Vref_Input
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM12_VS_ClockSourceINT.Mode=Internal
+VP_TIM12_VS_ClockSourceINT.Signal=TIM12_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
