--- a/DM_02_Hero.ioc
+++ b/DM_02_Hero.ioc
@@ -106,20 +106,21 @@ Mcu.CPN=STM32H723VGT6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=ADC3
-Mcu.IP10=RCC
-Mcu.IP11=SPI6
-Mcu.IP12=SYS
-Mcu.IP13=TIM12
-Mcu.IP14=USART1
+Mcu.IP10=NVIC
+Mcu.IP11=RCC
+Mcu.IP12=SPI6
+Mcu.IP13=SYS
+Mcu.IP14=TIM12
+Mcu.IP15=USART1
 Mcu.IP2=CORTEX_M7
-Mcu.IP3=DEBUG
-Mcu.IP4=FDCAN1
-Mcu.IP5=FDCAN2
-Mcu.IP6=FDCAN3
-Mcu.IP7=FREERTOS
-Mcu.IP8=MEMORYMAP
-Mcu.IP9=NVIC
-Mcu.IPNb=15
+Mcu.IP3=CRC
+Mcu.IP4=DEBUG
+Mcu.IP5=FDCAN1
+Mcu.IP6=FDCAN2
+Mcu.IP7=FDCAN3
+Mcu.IP8=FREERTOS
+Mcu.IP9=MEMORYMAP
+Mcu.IPNb=16
 Mcu.Name=STM32H723VGTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
@@ -133,10 +134,11 @@ Mcu.Pin15=PA14(JTCK/SWCLK)
 Mcu.Pin16=PC12
 Mcu.Pin17=VP_ADC3_TempSens_Input
 Mcu.Pin18=VP_ADC3_Vref_Input
-Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin19=VP_CRC_VS_CRC
 Mcu.Pin2=PA5
-Mcu.Pin20=VP_SYS_VS_tim2
-Mcu.Pin21=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin21=VP_SYS_VS_tim1
+Mcu.Pin22=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin3=PA7
 Mcu.Pin4=PC4
 Mcu.Pin5=PB12
@@ -144,7 +146,7 @@ Mcu.Pin6=PB13
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PD12
-Mcu.PinsNb=22
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H723VGTx
@@ -163,9 +165,9 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM2_IRQn
-NVIC.TimeBaseIP=TIM2
+NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM1_UP_IRQn
+NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -337,11 +339,13 @@ VP_ADC3_TempSens_Input.Mode=IN-TempSens
 VP_ADC3_TempSens_Input.Signal=ADC3_TempSens_Input
 VP_ADC3_Vref_Input.Mode=IN-Vrefint
 VP_ADC3_Vref_Input.Signal=ADC3_Vref_Input
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
-VP_SYS_VS_tim2.Mode=TIM2
-VP_SYS_VS_tim2.Signal=SYS_VS_tim2
+VP_SYS_VS_tim1.Mode=TIM1
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=custom
 rtos.0.ip=FREERTOS
