--- a/DM_02_Hero.ioc
+++ b/DM_02_Hero.ioc
@@ -190,7 +190,8 @@ FDCAN1.DataSyncJumpWidth=2
 FDCAN1.DataTimeSeg1=13
 FDCAN1.DataTimeSeg2=2
 FDCAN1.ExtFiltersNbr=4
-FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataPrescaler,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataPrescaler,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2,Mode
+FDCAN1.Mode=FDCAN_MODE_INTERNAL_LOOPBACK
 FDCAN1.NominalPrescaler=1
 FDCAN1.NominalSyncJumpWidth=20
 FDCAN1.NominalTimeSeg1=59
@@ -211,7 +212,8 @@ FDCAN2.DataSyncJumpWidth=2
 FDCAN2.DataTimeSeg1=13
 FDCAN2.DataTimeSeg2=2
 FDCAN2.ExtFiltersNbr=4
-FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2
+FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2,Mode
+FDCAN2.Mode=FDCAN_MODE_INTERNAL_LOOPBACK
 FDCAN2.NominalPrescaler=1
 FDCAN2.NominalSyncJumpWidth=20
 FDCAN2.NominalTimeSeg1=59
@@ -232,7 +234,8 @@ FDCAN3.DataSyncJumpWidth=2
 FDCAN3.DataTimeSeg1=13
 FDCAN3.DataTimeSeg2=2
 FDCAN3.ExtFiltersNbr=4
-FDCAN3.IPParameters=CalculateTimeQuantumNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,CalculateTimeBitNominal,NominalTimeSeg1,NominalTimeSeg2
+FDCAN3.IPParameters=CalculateTimeQuantumNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,CalculateTimeBitNominal,NominalTimeSeg1,NominalTimeSeg2,Mode
+FDCAN3.Mode=FDCAN_MODE_INTERNAL_LOOPBACK
 FDCAN3.NominalPrescaler=1
 FDCAN3.NominalSyncJumpWidth=20
 FDCAN3.NominalTimeSeg1=59
@@ -340,6 +343,9 @@ NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN3_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -478,7 +484,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_SPI6_Init-SPI6-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_ADC3_Init-ADC3-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_CRC_Init-CRC-false-HAL-true,13-MX_UART7_Init-UART7-false-HAL-true,14-MX_USART10_UART_Init-USART10-false-HAL-true,15-MX_SPI2_Init-SPI2-false-HAL-true,16-MX_TIM3_Init-TIM3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_SPI6_Init-SPI6-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_ADC3_Init-ADC3-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_CRC_Init-CRC-false-HAL-true,13-MX_UART7_Init-UART7-false-HAL-true,14-MX_USART10_UART_Init-USART10-false-HAL-true,15-MX_SPI2_Init-SPI2-false-HAL-true,16-MX_TIM3_Init-TIM3-false-HAL-true,17-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=96000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
