--- a/DM_02_Hero.ioc
+++ b/DM_02_Hero.ioc
@@ -36,7 +36,8 @@ Dma.Request4=USART10_RX
 Dma.Request5=USART10_TX
 Dma.Request6=SPI2_TX
 Dma.Request7=SPI2_RX
-Dma.RequestsNb=8
+Dma.Request8=UART5_RX
+Dma.RequestsNb=9
 Dma.SPI2_RX.7.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI2_RX.7.EventEnable=DISABLE
 Dma.SPI2_RX.7.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -73,6 +74,24 @@ Dma.SPI2_TX.6.SyncEnable=DISABLE
 Dma.SPI2_TX.6.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI2_TX.6.SyncRequestNumber=1
 Dma.SPI2_TX.6.SyncSignalID=NONE
+Dma.UART5_RX.8.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART5_RX.8.EventEnable=DISABLE
+Dma.UART5_RX.8.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART5_RX.8.Instance=DMA1_Stream1
+Dma.UART5_RX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART5_RX.8.MemInc=DMA_MINC_ENABLE
+Dma.UART5_RX.8.Mode=DMA_CIRCULAR
+Dma.UART5_RX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART5_RX.8.PeriphInc=DMA_PINC_DISABLE
+Dma.UART5_RX.8.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART5_RX.8.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.UART5_RX.8.RequestNumber=1
+Dma.UART5_RX.8.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART5_RX.8.SignalID=NONE
+Dma.UART5_RX.8.SyncEnable=DISABLE
+Dma.UART5_RX.8.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART5_RX.8.SyncRequestNumber=1
+Dma.UART5_RX.8.SyncSignalID=NONE
 Dma.UART7_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.UART7_RX.2.EventEnable=DISABLE
 Dma.UART7_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -166,7 +185,7 @@ Dma.USART1_RX.0.SyncSignalID=NONE
 Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.USART1_TX.1.EventEnable=DISABLE
 Dma.USART1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_TX.1.Instance=DMA1_Stream1
+Dma.USART1_TX.1.Instance=DMA2_Stream0
 Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
 Dma.USART1_TX.1.Mode=DMA_NORMAL
@@ -271,12 +290,13 @@ Mcu.IP14=SPI6
 Mcu.IP15=SYS
 Mcu.IP16=TIM3
 Mcu.IP17=TIM12
-Mcu.IP18=UART7
-Mcu.IP19=USART1
+Mcu.IP18=UART5
+Mcu.IP19=UART7
 Mcu.IP2=CORTEX_M7
-Mcu.IP20=USART10
-Mcu.IP21=USB_DEVICE
-Mcu.IP22=USB_OTG_HS
+Mcu.IP20=USART1
+Mcu.IP21=USART10
+Mcu.IP22=USB_DEVICE
+Mcu.IP23=USB_OTG_HS
 Mcu.IP3=CRC
 Mcu.IP4=DEBUG
 Mcu.IP5=DMA
@@ -284,7 +304,7 @@ Mcu.IP6=FDCAN1
 Mcu.IP7=FDCAN2
 Mcu.IP8=FDCAN3
 Mcu.IP9=FREERTOS
-Mcu.IPNb=23
+Mcu.IPNb=24
 Mcu.Name=STM32H723VGTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -296,37 +316,39 @@ Mcu.Pin13=PE7
 Mcu.Pin14=PE8
 Mcu.Pin15=PE10
 Mcu.Pin16=PE12
-Mcu.Pin17=PB13
-Mcu.Pin18=PB15
-Mcu.Pin19=PD12
+Mcu.Pin17=PB12
+Mcu.Pin18=PB13
+Mcu.Pin19=PB15
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PD13
-Mcu.Pin21=PA9
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13(JTMS/SWDIO)
-Mcu.Pin25=PA14(JTCK/SWCLK)
-Mcu.Pin26=PC12
-Mcu.Pin27=PD0
-Mcu.Pin28=PD1
-Mcu.Pin29=PB5
+Mcu.Pin20=PD12
+Mcu.Pin21=PD13
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13(JTMS/SWDIO)
+Mcu.Pin27=PA14(JTCK/SWCLK)
+Mcu.Pin28=PC12
+Mcu.Pin29=PD0
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PB6
-Mcu.Pin31=PB7
-Mcu.Pin32=VP_ADC3_TempSens_Input
-Mcu.Pin33=VP_ADC3_Vref_Input
-Mcu.Pin34=VP_CRC_VS_CRC
-Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin36=VP_SYS_VS_tim1
-Mcu.Pin37=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
-Mcu.Pin38=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin30=PD1
+Mcu.Pin31=PB3(JTDO/TRACESWO)
+Mcu.Pin32=PB5
+Mcu.Pin33=PB6
+Mcu.Pin34=VP_ADC3_TempSens_Input
+Mcu.Pin35=VP_ADC3_Vref_Input
+Mcu.Pin36=VP_CRC_VS_CRC
+Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin38=VP_SYS_VS_tim1
+Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
 Mcu.Pin4=PH1-OSC_OUT
+Mcu.Pin40=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2_C
 Mcu.Pin8=PC3_C
 Mcu.Pin9=PA5
-Mcu.PinsNb=39
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H723VGTx
@@ -341,6 +363,7 @@ NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -362,10 +385,13 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
+NVIC.UART5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UART7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA11.Locked=true
 PA11.Mode=Device_Only_FS
 PA11.Signal=USB_OTG_HS_DM
@@ -386,19 +412,23 @@ PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB1.Locked=true
 PB1.Signal=S_TIM3_CH4
+PB12.Mode=Asynchronous
+PB12.Signal=UART5_RX
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
 PB15.GPIOParameters=GPIO_Speed
 PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB15.Signal=S_TIM12_CH2
+PB3(JTDO/TRACESWO).GPIOParameters=GPIO_Speed
+PB3(JTDO/TRACESWO).GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB3(JTDO/TRACESWO).Mode=TX_Only_Simplex_Unidirect_Master
+PB3(JTDO/TRACESWO).Signal=SPI6_SCK
 PB5.Locked=true
 PB5.Mode=FDCAN_Activate
 PB5.Signal=FDCAN2_RX
 PB6.Mode=FDCAN_Activate
 PB6.Signal=FDCAN2_TX
-PB7.Mode=Asynchronous
-PB7.Signal=USART1_RX
 PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PC0.GPIO_Label=ACC_CS
 PC0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -407,10 +437,8 @@ PC0.PinState=GPIO_PIN_SET
 PC0.Signal=GPIO_Output
 PC1.Mode=Full_Duplex_Master
 PC1.Signal=SPI2_MOSI
-PC12.GPIOParameters=GPIO_Speed
-PC12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PC12.Mode=TX_Only_Simplex_Unidirect_Master
-PC12.Signal=SPI6_SCK
+PC12.Mode=Asynchronous
+PC12.Signal=UART5_TX
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=GPIO_Output
 PC2_C.Mode=Full_Duplex_Master
@@ -484,7 +512,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_SPI6_Init-SPI6-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_ADC3_Init-ADC3-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_CRC_Init-CRC-false-HAL-true,13-MX_UART7_Init-UART7-false-HAL-true,14-MX_USART10_UART_Init-USART10-false-HAL-true,15-MX_SPI2_Init-SPI2-false-HAL-true,16-MX_TIM3_Init-TIM3-false-HAL-true,17-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_SPI6_Init-SPI6-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_ADC3_Init-ADC3-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_CRC_Init-CRC-false-HAL-true,13-MX_UART7_Init-UART7-false-HAL-true,14-MX_USART10_UART_Init-USART10-false-HAL-true,15-MX_SPI2_Init-SPI2-false-HAL-true,16-MX_TIM3_Init-TIM3-false-HAL-true,17-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,18-MX_UART5_Init-UART5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=96000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -603,6 +631,11 @@ TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-PWM Generation4 CH4,Prescaler,Period,AutoReloadPreload
 TIM3.Period=10000-1
 TIM3.Prescaler=24-1
+UART5.BaudRate=100000
+UART5.IPParameters=BaudRate,WordLength,Parity,StopBits
+UART5.Parity=PARITY_EVEN
+UART5.StopBits=UART_STOPBITS_2
+UART5.WordLength=WORDLENGTH_9B
 USART1.BaudRate=921600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
