新增了底盘状态机和IMU解算

--- a/DM_02_Hero.ioc
+++ b/DM_02_Hero.ioc
@@ -210,7 +210,7 @@ FDCAN1.DataTimeSeg1=13
 FDCAN1.DataTimeSeg2=2
 FDCAN1.ExtFiltersNbr=4
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataPrescaler,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2,Mode
-FDCAN1.Mode=FDCAN_MODE_INTERNAL_LOOPBACK
+FDCAN1.Mode=FDCAN_MODE_NORMAL
 FDCAN1.NominalPrescaler=1
 FDCAN1.NominalSyncJumpWidth=20
 FDCAN1.NominalTimeSeg1=59
@@ -232,7 +232,7 @@ FDCAN2.DataTimeSeg1=13
 FDCAN2.DataTimeSeg2=2
 FDCAN2.ExtFiltersNbr=4
 FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2,Mode
-FDCAN2.Mode=FDCAN_MODE_INTERNAL_LOOPBACK
+FDCAN2.Mode=FDCAN_MODE_NORMAL
 FDCAN2.NominalPrescaler=1
 FDCAN2.NominalSyncJumpWidth=20
 FDCAN2.NominalTimeSeg1=59
@@ -254,7 +254,7 @@ FDCAN3.DataTimeSeg1=13
 FDCAN3.DataTimeSeg2=2
 FDCAN3.ExtFiltersNbr=4
 FDCAN3.IPParameters=CalculateTimeQuantumNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,CalculateTimeBitNominal,NominalTimeSeg1,NominalTimeSeg2,Mode
-FDCAN3.Mode=FDCAN_MODE_INTERNAL_LOOPBACK
+FDCAN3.Mode=FDCAN_MODE_NORMAL
 FDCAN3.NominalPrescaler=1
 FDCAN3.NominalSyncJumpWidth=20
 FDCAN3.NominalTimeSeg1=59
@@ -343,13 +343,15 @@ Mcu.Pin38=VP_SYS_VS_tim1
 Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin40=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin41=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2_C
 Mcu.Pin8=PC3_C
 Mcu.Pin9=PA5
-Mcu.PinsNb=41
-Mcu.ThirdPartyNb=0
+Mcu.PinsNb=42
+Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32H723VGTx
 MxCube.Version=6.12.1
@@ -620,6 +622,10 @@ SPI6.Direction=SPI_DIRECTION_2LINES_TXONLY
 SPI6.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI6.Mode=SPI_MODE_MASTER
 SPI6.VirtualType=VM_MASTER
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
 TIM12.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM12.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload,Pulse-PWM Generation2 CH2
@@ -657,6 +663,8 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode=DSPOoLibraryJjLibrary
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
