遥控器DMA接收成功

--- a/DM_02_Hero.ioc
+++ b/DM_02_Hero.ioc
@@ -77,10 +77,10 @@ Dma.SPI2_TX.6.SyncSignalID=NONE
 Dma.UART5_RX.8.Direction=DMA_PERIPH_TO_MEMORY
 Dma.UART5_RX.8.EventEnable=DISABLE
 Dma.UART5_RX.8.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART5_RX.8.Instance=DMA1_Stream1
+Dma.UART5_RX.8.Instance=DMA1_Stream0
 Dma.UART5_RX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.UART5_RX.8.MemInc=DMA_MINC_ENABLE
-Dma.UART5_RX.8.Mode=DMA_CIRCULAR
+Dma.UART5_RX.8.Mode=DMA_NORMAL
 Dma.UART5_RX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.UART5_RX.8.PeriphInc=DMA_PINC_DISABLE
 Dma.UART5_RX.8.Polarity=HAL_DMAMUX_REQ_GEN_RISING
@@ -167,7 +167,7 @@ Dma.USART10_TX.5.SyncSignalID=NONE
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.0.EventEnable=DISABLE
 Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_RX.0.Instance=DMA1_Stream0
+Dma.USART1_RX.0.Instance=DMA1_Stream1
 Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
 Dma.USART1_RX.0.Mode=DMA_NORMAL
@@ -316,22 +316,22 @@ Mcu.Pin13=PE7
 Mcu.Pin14=PE8
 Mcu.Pin15=PE10
 Mcu.Pin16=PE12
-Mcu.Pin17=PB12
-Mcu.Pin18=PB13
-Mcu.Pin19=PB15
+Mcu.Pin17=PB13
+Mcu.Pin18=PB15
+Mcu.Pin19=PD12
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PD12
-Mcu.Pin21=PD13
-Mcu.Pin22=PA9
-Mcu.Pin23=PA10
-Mcu.Pin24=PA11
-Mcu.Pin25=PA12
-Mcu.Pin26=PA13(JTMS/SWDIO)
-Mcu.Pin27=PA14(JTCK/SWCLK)
-Mcu.Pin28=PC12
-Mcu.Pin29=PD0
+Mcu.Pin20=PD13
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13(JTMS/SWDIO)
+Mcu.Pin26=PA14(JTCK/SWCLK)
+Mcu.Pin27=PC12
+Mcu.Pin28=PD0
+Mcu.Pin29=PD1
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PD1
+Mcu.Pin30=PD2
 Mcu.Pin31=PB3(JTDO/TRACESWO)
 Mcu.Pin32=PB5
 Mcu.Pin33=PB6
@@ -414,8 +414,6 @@ PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB1.Locked=true
 PB1.Signal=S_TIM3_CH4
-PB12.Mode=Asynchronous
-PB12.Signal=UART5_RX
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
@@ -463,6 +461,9 @@ PD12.Mode=FDCAN_Activate
 PD12.Signal=FDCAN3_RX
 PD13.Mode=FDCAN_Activate
 PD13.Signal=FDCAN3_TX
+PD2.Locked=true
+PD2.Mode=Asynchronous
+PD2.Signal=UART5_RX
 PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=ACC_INT
 PE10.Locked=true
