--- a/DM_02_Hero.ioc
+++ b/DM_02_Hero.ioc
@@ -270,7 +270,7 @@ FDCAN3.TxFifoQueueElmtsNbr=8
 FREERTOS.BinarySemaphores01=imuBinarySem01,Dynamic,NULL,Available
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,configUSE_NEWLIB_REENTRANT,BinarySemaphores01
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;logTask,8,128,log_task,As external,NULL,Dynamic,NULL,NULL;ledTask,8,128,led_task,As external,NULL,Dynamic,NULL,NULL;imuTask,8,128,imu_task,As external,NULL,Dynamic,NULL,NULL;usbTask,8,128,usb_task,As external,NULL,Dynamic,NULL,NULL;refereeTask,8,128,referee_task,As external,NULL,Dynamic,NULL,NULL;chassisTask,40,128,chassis_task,As external,NULL,Dynamic,NULL,NULL;detectTask,8,128,detect_task,As external,NULL,Dynamic,NULL,NULL;remoteControlTa,8,128,remote_control_task,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;logTask,8,128,log_task,As external,NULL,Dynamic,NULL,NULL;ledTask,8,128,led_task,As external,NULL,Dynamic,NULL,NULL;imuTask,8,128,imu_task,As external,NULL,Dynamic,NULL,NULL;usbTask,8,128,usb_task,As external,NULL,Dynamic,NULL,NULL;refereeTask,8,128,referee_task,As external,NULL,Dynamic,NULL,NULL;chassisTask,40,128,chassis_task,As external,NULL,Dynamic,NULL,NULL;detectTask,8,128,detect_task,As external,NULL,Dynamic,NULL,NULL;remoteControlTa,8,128,remote_control_task,As external,NULL,Dynamic,NULL,NULL;gimbalTask,48,128,gimbal_task,As external,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
