修改了LED闪烁不正常的bug

--- a/DM_02_Hero.ioc
+++ b/DM_02_Hero.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_19
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV64
 ADC1.ClockPrescalerADC3=ADC_CLOCK_ASYNC_DIV4
 ADC1.ContinuousConvMode=ENABLE
@@ -28,6 +28,9 @@ ADC3.SamplingTime-1\#ChannelRegularConversion=ADC3_SAMPLETIME_640CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+CORTEX_M7.CPU_DCache=Disabled
+CORTEX_M7.CPU_ICache=Enabled
+CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache
 Dma.Request0=USART1_RX
 Dma.Request1=USART1_TX
 Dma.Request2=UART7_RX
@@ -270,13 +273,63 @@ FDCAN3.TxFifoQueueElmtsNbr=8
 FREERTOS.BinarySemaphores01=imuBinarySem01,Dynamic,NULL,Available
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,configUSE_NEWLIB_REENTRANT,BinarySemaphores01
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;logTask,8,128,log_task,As external,NULL,Dynamic,NULL,NULL;ledTask,8,128,led_task,As external,NULL,Dynamic,NULL,NULL;imuTask,8,128,imu_task,As external,NULL,Dynamic,NULL,NULL;usbTask,8,128,usb_task,As external,NULL,Dynamic,NULL,NULL;refereeTask,8,128,referee_task,As external,NULL,Dynamic,NULL,NULL;chassisTask,40,128,chassis_task,As external,NULL,Dynamic,NULL,NULL;detectTask,8,128,detect_task,As external,NULL,Dynamic,NULL,NULL;remoteControlTa,8,128,remote_control_task,As external,NULL,Dynamic,NULL,NULL;gimbalTask,48,128,gimbal_task,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ledTask,8,128,led_task,As external,NULL,Dynamic,NULL,NULL;imuTask,8,128,imu_task,As external,NULL,Dynamic,NULL,NULL;usbTask,8,128,usb_task,As external,NULL,Dynamic,NULL,NULL;refereeTask,8,128,referee_task,As external,NULL,Dynamic,NULL,NULL;chassisTask,40,128,chassis_task,As external,NULL,Dynamic,NULL,NULL;detectTask,8,128,detect_task,As external,NULL,Dynamic,NULL,NULL;remoteControlTa,8,128,remote_control_task,As external,NULL,Dynamic,NULL,NULL;gimbalTask,48,128,gimbal_task,As external,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
-MMTAppRegionsCount=0
+MMTAppReg1.MEMORYMAP.AppRegionName=DTCMRAM
+MMTAppReg1.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg1.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg1.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name
+MMTAppReg1.MEMORYMAP.Name=DTCMRAM
+MMTAppReg1.MEMORYMAP.Size=131072
+MMTAppReg1.MEMORYMAP.StartAddress=0x20000000
+MMTAppReg2.MEMORYMAP.AppRegionName=RAM
+MMTAppReg2.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg2.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg2.MEMORYMAP.DefaultDataRegion=true
+MMTAppReg2.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,DefaultDataRegion
+MMTAppReg2.MEMORYMAP.Name=RAM
+MMTAppReg2.MEMORYMAP.Size=131072
+MMTAppReg2.MEMORYMAP.StartAddress=0x24000000
+MMTAppReg3.MEMORYMAP.AppRegionName=RAM_D2
+MMTAppReg3.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg3.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg3.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name
+MMTAppReg3.MEMORYMAP.Name=RAM_D2
+MMTAppReg3.MEMORYMAP.Size=32768
+MMTAppReg3.MEMORYMAP.StartAddress=0x30000000
+MMTAppReg4.MEMORYMAP.AppRegionName=RAM_D3
+MMTAppReg4.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg4.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg4.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name
+MMTAppReg4.MEMORYMAP.Name=RAM_D3
+MMTAppReg4.MEMORYMAP.Size=16384
+MMTAppReg4.MEMORYMAP.StartAddress=0x38000000
+MMTAppReg5.MEMORYMAP.AppRegionName=ITCMRAM
+MMTAppReg5.MEMORYMAP.Cacheability=WTRA
+MMTAppReg5.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg5.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg5.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,Cacheability
+MMTAppReg5.MEMORYMAP.Name=ITCMRAM
+MMTAppReg5.MEMORYMAP.Size=65536
+MMTAppReg5.MEMORYMAP.StartAddress=0x00000000
+MMTAppReg6.MEMORYMAP.AP=RO_priv_only
+MMTAppReg6.MEMORYMAP.AppRegionName=FLASH
+MMTAppReg6.MEMORYMAP.Cacheability=WTRA
+MMTAppReg6.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg6.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg6.MEMORYMAP.DefaultCodeRegion=true
+MMTAppReg6.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,MemType,ContextName,Name,AP,Cacheability,DefaultCodeRegion,ISRRegion,RootBootRegion
+MMTAppReg6.MEMORYMAP.ISRRegion=true
+MMTAppReg6.MEMORYMAP.MemType=ROM
+MMTAppReg6.MEMORYMAP.Name=FLASH
+MMTAppReg6.MEMORYMAP.RootBootRegion=true
+MMTAppReg6.MEMORYMAP.Size=1048576
+MMTAppReg6.MEMORYMAP.StartAddress=0x08000000
+MMTAppRegionsCount=6
 MMTConfigApplied=false
 Mcu.CPN=STM32H723VGT6
 Mcu.Family=STM32H7
@@ -332,14 +385,14 @@ Mcu.Pin28=PD0
 Mcu.Pin29=PD1
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin30=PD2
-Mcu.Pin31=PB3(JTDO/TRACESWO)
-Mcu.Pin32=PB5
-Mcu.Pin33=PB6
-Mcu.Pin34=VP_ADC3_TempSens_Input
-Mcu.Pin35=VP_ADC3_Vref_Input
-Mcu.Pin36=VP_CRC_VS_CRC
-Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin38=VP_SYS_VS_tim1
+Mcu.Pin31=PB5
+Mcu.Pin32=PB6
+Mcu.Pin33=VP_ADC3_TempSens_Input
+Mcu.Pin34=VP_ADC3_Vref_Input
+Mcu.Pin35=VP_CRC_VS_CRC
+Mcu.Pin36=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin37=VP_SYS_VS_tim1
+Mcu.Pin38=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin40=VP_MEMORYMAP_VS_MEMORYMAP
@@ -404,8 +457,14 @@ PA13(JTMS/SWDIO).Mode=Serial_Wire
 PA13(JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14(JTCK/SWCLK).Mode=Serial_Wire
 PA14(JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
-PA5.Signal=ADCx_INP19
-PA7.GPIOParameters=GPIO_Speed
+PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PA5.GPIO_PuPd=GPIO_NOPULL
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA5.Locked=true
+PA5.Mode=TX_Only_Simplex_Unidirect_Master
+PA5.Signal=SPI6_SCK
+PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PA7.GPIO_PuPd=GPIO_NOPULL
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI6_MOSI
@@ -420,10 +479,6 @@ PB13.Signal=SPI2_SCK
 PB15.GPIOParameters=GPIO_Speed
 PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB15.Signal=S_TIM12_CH2
-PB3(JTDO/TRACESWO).GPIOParameters=GPIO_Speed
-PB3(JTDO/TRACESWO).GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PB3(JTDO/TRACESWO).Mode=TX_Only_Simplex_Unidirect_Master
-PB3(JTDO/TRACESWO).Signal=SPI6_SCK
 PB5.Locked=true
 PB5.Mode=FDCAN_Activate
 PB5.Signal=FDCAN2_RX
@@ -515,7 +570,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_SPI6_Init-SPI6-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_ADC3_Init-ADC3-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_CRC_Init-CRC-false-HAL-true,13-MX_UART7_Init-UART7-false-HAL-true,14-MX_USART10_UART_Init-USART10-false-HAL-true,15-MX_SPI2_Init-SPI2-false-HAL-true,16-MX_TIM3_Init-TIM3-false-HAL-true,17-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,18-MX_UART5_Init-UART5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_CRC_Init-CRC-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_USART10_UART_Init-USART10-false-HAL-true,14-MX_SPI2_Init-SPI2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,17-MX_UART5_Init-UART5-false-HAL-true,18-MX_SPI6_Init-SPI6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=96000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -559,7 +614,7 @@ RCC.HPRE=RCC_HCLK_DIV2
 RCC.HSE_VALUE=24000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6CLockSelection,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
@@ -580,7 +635,8 @@ RCC.SDMMCFreq_Value=80000000
 RCC.SPDIFRXFreq_Value=80000000
 RCC.SPI123Freq_Value=80000000
 RCC.SPI45Freq_Value=120000000
-RCC.SPI6Freq_Value=120000000
+RCC.SPI6CLockSelection=RCC_SPI6CLKSOURCE_HSE
+RCC.SPI6Freq_Value=24000000
 RCC.SWPMI1Freq_Value=120000000
 RCC.SYSCLKFreq_VALUE=480000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
@@ -597,8 +653,6 @@ RCC.VCO3OutputFreq_Value=96750000
 RCC.VCOInput1Freq_Value=12000000
 RCC.VCOInput2Freq_Value=12000000
 RCC.VCOInput3Freq_Value=750000
-SH.ADCx_INP19.0=ADC1_INP19,IN19-Single-Ended
-SH.ADCx_INP19.ConfNb=1
 SH.ADCx_INP4.0=ADC1_INP4,IN4-Single-Ended
 SH.ADCx_INP4.ConfNb=1
 SH.GPXTI10.0=GPIO_EXTI10
@@ -618,9 +672,12 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CLKPhase
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-SPI6.CalculateBaudRate=60.0 MBits/s
+SPI6.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI6.CLKPhase=SPI_PHASE_2EDGE
+SPI6.CalculateBaudRate=6.0 MBits/s
+SPI6.DataSize=SPI_DATASIZE_8BIT
 SPI6.Direction=SPI_DIRECTION_2LINES_TXONLY
-SPI6.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI6.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,CLKPhase,BaudRatePrescaler
 SPI6.Mode=SPI_MODE_MASTER
 SPI6.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
@@ -635,8 +692,9 @@ TIM12.Prescaler=24-1
 TIM12.Pulse-PWM\ Generation2\ CH2=1000
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM3.IPParameters=Channel-PWM Generation4 CH4,Prescaler,Period,AutoReloadPreload
-TIM3.Period=10000-1
+TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,ClockDivision,Channel-PWM Generation4 CH4
+TIM3.Period=12500-1
 TIM3.Prescaler=24-1
 UART5.BaudRate=100000
 UART5.IPParameters=BaudRate,WordLength,Parity,StopBits
@@ -668,6 +726,8 @@ VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_HS
 board=custom
