--- a/DM_02_Hero.ioc
+++ b/DM_02_Hero.ioc
@@ -87,7 +87,7 @@ Dma.UART5_RX.8.Mode=DMA_NORMAL
 Dma.UART5_RX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.UART5_RX.8.PeriphInc=DMA_PINC_DISABLE
 Dma.UART5_RX.8.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.UART5_RX.8.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.UART5_RX.8.Priority=DMA_PRIORITY_HIGH
 Dma.UART5_RX.8.RequestNumber=1
 Dma.UART5_RX.8.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.UART5_RX.8.SignalID=NONE
@@ -281,6 +281,10 @@ FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.CustomTiming=Disabled
+I2C1.I2C_Speed_Mode=I2C_Fast
+I2C1.IPParameters=Timing,CustomTiming,I2C_Speed_Mode
+I2C1.Timing=0x00B03FDB
 KeepUserPlacement=false
 MMTAppReg1.MEMORYMAP.AppRegionName=DTCMRAM
 MMTAppReg1.MEMORYMAP.ContextName=Cortex-M7NS
@@ -338,21 +342,22 @@ Mcu.CPN=STM32H723VGT6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=ADC3
-Mcu.IP10=MEMORYMAP
-Mcu.IP11=NVIC
-Mcu.IP12=RCC
-Mcu.IP13=SPI2
-Mcu.IP14=SPI6
-Mcu.IP15=SYS
-Mcu.IP16=TIM3
-Mcu.IP17=TIM12
-Mcu.IP18=UART5
-Mcu.IP19=UART7
+Mcu.IP10=I2C1
+Mcu.IP11=MEMORYMAP
+Mcu.IP12=NVIC
+Mcu.IP13=RCC
+Mcu.IP14=SPI2
+Mcu.IP15=SPI6
+Mcu.IP16=SYS
+Mcu.IP17=TIM3
+Mcu.IP18=TIM12
+Mcu.IP19=UART5
 Mcu.IP2=CORTEX_M7
-Mcu.IP20=USART1
-Mcu.IP21=USART10
-Mcu.IP22=USB_DEVICE
-Mcu.IP23=USB_OTG_HS
+Mcu.IP20=UART7
+Mcu.IP21=USART1
+Mcu.IP22=USART10
+Mcu.IP23=USB_DEVICE
+Mcu.IP24=USB_OTG_HS
 Mcu.IP3=CRC
 Mcu.IP4=DEBUG
 Mcu.IP5=DMA
@@ -360,7 +365,7 @@ Mcu.IP6=FDCAN1
 Mcu.IP7=FDCAN2
 Mcu.IP8=FDCAN3
 Mcu.IP9=FREERTOS
-Mcu.IPNb=24
+Mcu.IPNb=25
 Mcu.Name=STM32H723VGTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -383,29 +388,32 @@ Mcu.Pin23=PA11
 Mcu.Pin24=PA12
 Mcu.Pin25=PA13(JTMS/SWDIO)
 Mcu.Pin26=PA14(JTCK/SWCLK)
-Mcu.Pin27=PC12
-Mcu.Pin28=PD0
-Mcu.Pin29=PD1
+Mcu.Pin27=PC11
+Mcu.Pin28=PC12
+Mcu.Pin29=PD0
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PD2
-Mcu.Pin31=PB5
-Mcu.Pin32=PB6
-Mcu.Pin33=VP_ADC3_TempSens_Input
-Mcu.Pin34=VP_ADC3_Vref_Input
-Mcu.Pin35=VP_CRC_VS_CRC
-Mcu.Pin36=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin37=VP_SYS_VS_tim1
-Mcu.Pin38=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
+Mcu.Pin30=PD1
+Mcu.Pin31=PD2
+Mcu.Pin32=PB5
+Mcu.Pin33=PB6
+Mcu.Pin34=PB8
+Mcu.Pin35=PB9
+Mcu.Pin36=VP_ADC3_TempSens_Input
+Mcu.Pin37=VP_ADC3_Vref_Input
+Mcu.Pin38=VP_CRC_VS_CRC
+Mcu.Pin39=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin41=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
+Mcu.Pin40=VP_SYS_VS_tim1
+Mcu.Pin41=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin42=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
+Mcu.Pin43=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin44=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2_C
 Mcu.Pin8=PC3_C
 Mcu.Pin9=PA5
-Mcu.PinsNb=42
+Mcu.PinsNb=45
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -487,6 +495,16 @@ PB5.Mode=FDCAN_Activate
 PB5.Signal=FDCAN2_RX
 PB6.Mode=FDCAN_Activate
 PB6.Signal=FDCAN2_TX
+PB8.GPIOParameters=GPIO_Speed
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Speed
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB9.Locked=true
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PC0.GPIO_Label=ACC_CS
 PC0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -495,6 +513,12 @@ PC0.PinState=GPIO_PIN_SET
 PC0.Signal=GPIO_Output
 PC1.Mode=Full_Duplex_Master
 PC1.Signal=SPI2_MOSI
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=MAG_INT
+PC11.Locked=true
+PC11.Signal=GPXTI11
+PC12.GPIOParameters=GPIO_ModeDefaultPP
+PC12.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PC12.Mode=Asynchronous
 PC12.Signal=UART5_TX
 PC15-OSC32_OUT.Locked=true
@@ -519,6 +543,8 @@ PD12.Mode=FDCAN_Activate
 PD12.Signal=FDCAN3_RX
 PD13.Mode=FDCAN_Activate
 PD13.Signal=FDCAN3_TX
+PD2.GPIOParameters=GPIO_ModeDefaultPP
+PD2.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PD2.Locked=true
 PD2.Mode=Asynchronous
 PD2.Signal=UART5_RX
@@ -573,7 +599,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_CRC_Init-CRC-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_USART10_UART_Init-USART10-false-HAL-true,14-MX_SPI2_Init-SPI2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,17-MX_UART5_Init-UART5-false-HAL-true,18-MX_SPI6_Init-SPI6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_CRC_Init-CRC-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_USART10_UART_Init-USART10-false-HAL-true,14-MX_SPI2_Init-SPI2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,17-MX_UART5_Init-UART5-false-HAL-true,18-MX_SPI6_Init-SPI6-false-HAL-true,19-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=96000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -660,6 +686,8 @@ SH.ADCx_INP4.0=ADC1_INP4,IN4-Single-Ended
 SH.ADCx_INP4.ConfNb=1
 SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
 SH.GPXTI12.0=GPIO_EXTI12
 SH.GPXTI12.ConfNb=1
 SH.S_TIM12_CH2.0=TIM12_CH2,PWM Generation2 CH2
@@ -700,9 +728,11 @@ TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,ClockDivision,Channel-PWM G
 TIM3.Period=12500-1
 TIM3.Prescaler=24-1
 UART5.BaudRate=100000
-UART5.IPParameters=BaudRate,WordLength,Parity,StopBits
+UART5.IPParameters=BaudRate,WordLength,Parity,StopBits,Mode,SwapParam
+UART5.Mode=MODE_RX
 UART5.Parity=PARITY_EVEN
 UART5.StopBits=UART_STOPBITS_2
+UART5.SwapParam=UART_ADVFEATURE_SWAP_DISABLE
 UART5.WordLength=WORDLENGTH_9B
 USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
