新增定时器Tick记录任务运行状态

--- a/DM_02_Hero.ioc
+++ b/DM_02_Hero.ioc
@@ -25,8 +25,8 @@ ADC3.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC3.OffsetSign-1\#ChannelRegularConversion=ADC3_OFFSET_SIGN_NEGATIVE
 ADC3.Rank-1\#ChannelRegularConversion=1
 ADC3.SamplingTime-1\#ChannelRegularConversion=ADC3_SAMPLETIME_640CYCLES_5
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
 CORTEX_M7.CPU_DCache=Disabled
 CORTEX_M7.CPU_ICache=Enabled
@@ -274,11 +274,13 @@ FREERTOS.BinarySemaphores01=imuBinarySem01,Dynamic,NULL,Available
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xEventGroupSetBitFromISR=1
 FREERTOS.INCLUDE_xSemaphoreGetMutexHolder=1
-FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,configUSE_NEWLIB_REENTRANT,BinarySemaphores01,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,INCLUDE_xEventGroupSetBitFromISR,INCLUDE_xSemaphoreGetMutexHolder
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,configUSE_NEWLIB_REENTRANT,BinarySemaphores01,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,INCLUDE_xEventGroupSetBitFromISR,INCLUDE_xSemaphoreGetMutexHolder,configUSE_STATS_FORMATTING_FUNCTIONS,configGENERATE_RUN_TIME_STATS
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ledTask,8,128,led_task,As external,NULL,Dynamic,NULL,NULL;imuTask,8,128,imu_task,As external,NULL,Dynamic,NULL,NULL;usbTask,8,128,usb_task,As external,NULL,Dynamic,NULL,NULL;refereeTask,8,128,referee_task,As external,NULL,Dynamic,NULL,NULL;chassisTask,40,128,chassis_task,As external,NULL,Dynamic,NULL,NULL;detectTask,8,128,detect_task,As external,NULL,Dynamic,NULL,NULL;remoteControlTa,8,128,remote_control_task,As external,NULL,Dynamic,NULL,NULL;gimbalTask,48,128,gimbal_task,As external,NULL,Dynamic,NULL,NULL;buzzerTask,8,128,buzzer_task,As external,NULL,Dynamic,NULL,NULL;shootTask,43,128,shoot_task,As external,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
+FREERTOS.configGENERATE_RUN_TIME_STATS=1
 FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
+FREERTOS.configUSE_STATS_FORMATTING_FUNCTIONS=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.CustomTiming=Disabled
@@ -351,13 +353,14 @@ Mcu.IP15=SPI6
 Mcu.IP16=SYS
 Mcu.IP17=TIM3
 Mcu.IP18=TIM12
-Mcu.IP19=UART5
+Mcu.IP19=TIM24
 Mcu.IP2=CORTEX_M7
-Mcu.IP20=UART7
-Mcu.IP21=USART1
-Mcu.IP22=USART10
-Mcu.IP23=USB_DEVICE
-Mcu.IP24=USB_OTG_HS
+Mcu.IP20=UART5
+Mcu.IP21=UART7
+Mcu.IP22=USART1
+Mcu.IP23=USART10
+Mcu.IP24=USB_DEVICE
+Mcu.IP25=USB_OTG_HS
 Mcu.IP3=CRC
 Mcu.IP4=DEBUG
 Mcu.IP5=DMA
@@ -365,7 +368,7 @@ Mcu.IP6=FDCAN1
 Mcu.IP7=FDCAN2
 Mcu.IP8=FDCAN3
 Mcu.IP9=FREERTOS
-Mcu.IPNb=25
+Mcu.IPNb=26
 Mcu.Name=STM32H723VGTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -405,15 +408,16 @@ Mcu.Pin39=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin40=VP_SYS_VS_tim1
 Mcu.Pin41=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin42=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
-Mcu.Pin43=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin44=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
+Mcu.Pin42=VP_TIM24_VS_ClockSourceINT
+Mcu.Pin43=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
+Mcu.Pin44=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin45=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2_C
 Mcu.Pin8=PC3_C
 Mcu.Pin9=PA5
-Mcu.PinsNb=45
+Mcu.PinsNb=46
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -449,6 +453,7 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM24_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UART5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -721,6 +726,10 @@ TIM12.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreloa
 TIM12.Period=2000-1
 TIM12.Prescaler=24-1
 TIM12.Pulse-PWM\ Generation2\ CH2=1000
+TIM24.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM24.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM24.Period=500
+TIM24.Prescaler=17-1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV1
@@ -759,6 +768,8 @@ VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM24_VS_ClockSourceINT.Mode=Internal
+VP_TIM24_VS_ClockSourceINT.Signal=TIM24_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
