--- a/DM_02_Hero.ioc
+++ b/DM_02_Hero.ioc
@@ -274,7 +274,8 @@ FREERTOS.BinarySemaphores01=imuBinarySem01,Dynamic,NULL,Available
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xEventGroupSetBitFromISR=1
 FREERTOS.INCLUDE_xSemaphoreGetMutexHolder=1
-FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,configUSE_NEWLIB_REENTRANT,BinarySemaphores01,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,INCLUDE_xEventGroupSetBitFromISR,INCLUDE_xSemaphoreGetMutexHolder,configUSE_STATS_FORMATTING_FUNCTIONS,configGENERATE_RUN_TIME_STATS
+FREERTOS.INCLUDE_xTaskGetHandle=1
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,FootprintOK,configUSE_NEWLIB_REENTRANT,BinarySemaphores01,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,INCLUDE_xEventGroupSetBitFromISR,INCLUDE_xSemaphoreGetMutexHolder,configUSE_STATS_FORMATTING_FUNCTIONS,configGENERATE_RUN_TIME_STATS,INCLUDE_xTaskGetHandle
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;ledTask,8,128,led_task,As external,NULL,Dynamic,NULL,NULL;imuTask,8,128,imu_task,As external,NULL,Dynamic,NULL,NULL;usbTask,8,128,usb_task,As external,NULL,Dynamic,NULL,NULL;refereeTask,8,128,referee_task,As external,NULL,Dynamic,NULL,NULL;chassisTask,40,128,chassis_task,As external,NULL,Dynamic,NULL,NULL;detectTask,8,128,detect_task,As external,NULL,Dynamic,NULL,NULL;remoteControlTa,8,128,remote_control_task,As external,NULL,Dynamic,NULL,NULL;gimbalTask,48,128,gimbal_task,As external,NULL,Dynamic,NULL,NULL;buzzerTask,8,128,buzzer_task,As external,NULL,Dynamic,NULL,NULL;shootTask,43,128,shoot_task,As external,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=1
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
@@ -331,11 +332,12 @@ MMTAppReg6.MEMORYMAP.Cacheability=WTRA
 MMTAppReg6.MEMORYMAP.ContextName=Cortex-M7NS
 MMTAppReg6.MEMORYMAP.CoreName=Arm Cortex-M7
 MMTAppReg6.MEMORYMAP.DefaultCodeRegion=true
-MMTAppReg6.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,MemType,ContextName,Name,AP,Cacheability,DefaultCodeRegion,ISRRegion,RootBootRegion
+MMTAppReg6.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,MemType,ContextName,Name,AP,Cacheability,DefaultCodeRegion,ISRRegion,RootBootRegion,Shareability
 MMTAppReg6.MEMORYMAP.ISRRegion=true
 MMTAppReg6.MEMORYMAP.MemType=ROM
 MMTAppReg6.MEMORYMAP.Name=FLASH
 MMTAppReg6.MEMORYMAP.RootBootRegion=true
+MMTAppReg6.MEMORYMAP.Shareability=NonShareable
 MMTAppReg6.MEMORYMAP.Size=1048576
 MMTAppReg6.MEMORYMAP.StartAddress=0x08000000
 MMTAppRegionsCount=6
@@ -604,7 +606,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_CRC_Init-CRC-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_USART10_UART_Init-USART10-false-HAL-true,14-MX_SPI2_Init-SPI2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,17-MX_UART5_Init-UART5-false-HAL-true,18-MX_SPI6_Init-SPI6-false-HAL-true,19-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_FDCAN3_Init-FDCAN3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_TIM12_Init-TIM12-false-HAL-true,11-MX_CRC_Init-CRC-false-HAL-true,12-MX_UART7_Init-UART7-false-HAL-true,13-MX_USART10_UART_Init-USART10-false-HAL-true,14-MX_SPI2_Init-SPI2-false-HAL-true,15-MX_TIM3_Init-TIM3-false-HAL-true,16-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,17-MX_UART5_Init-UART5-false-HAL-true,18-MX_SPI6_Init-SPI6-false-HAL-true,19-MX_I2C1_Init-I2C1-false-HAL-true,20-MX_TIM24_Init-TIM24-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=96000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
